--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-advent-of-code-data==2.0.4
-aocd==0.1
-aocd-example-parser==2023.12.20
-beautifulsoup4==4.12.3
-gitdb==4.0.11
-GitPython==3.1.41
-numpy==2.2.0
-Pebble==5.1.0
-setuptools==69.0.3
-smmap==5.0.1
-soupsieve==2.6
-urllib3==2.2.3
+
+advent-of-code-data
+consoledraw
+numpy
+pulp
+tqdm
